tests/baselines/reference/parserComputedPropertyName3.errors.txt
parserComputedPropertyName3.ts(1,12): error TS2304: Cannot find name 'e'.


==== parserComputedPropertyName3.ts (1 errors) ====
    var v = { [e]() { } };
               ~
!!! error TS2304: Cannot find name 'e'.